# humblelogging

./: .clang-format  .gitignore  .travis.yml  BENCHMARK.md  CMakeLists.txt  CODE  Doxyfile  LICENSE  README.md  README.rst  TODO.rst  index.html  params.json  version.h.in
.devcontainer/: Dockerfile  devcontainer.json
apps/basic_example/: CMakeLists.txt  main.cpp
apps/benchmark/: CMakeLists.txt  main.cpp
cmake/: FindHumbleLogging.cmake  FindHumbleLoggingLibrary.cmake
examples/basic/: CMakeLists.txt  basic_example.cpp
examples/configured/: CMakeLists.txt  configured_example.cpp
examples/log_level_test/: CMakeLists.txt  log_level_test.cpp
examples/mtperformance/: CMakeLists.txt  mtperformance_example.cpp
examples/pattern_formatter/: CMakeLists.txt  pattern_formatter_example.cpp
examples/performance/: CMakeLists.txt  performance_example.cpp
examples/threaded/: CMakeLists.txt  threaded_example.cpp
include/: appender.h  defines.h  factory.h  formatter.h  humble-logging.h  logger.h  loglevel.h  mutex_windows.h
include/humblelogging/: api.h  appender.h  configuration.h  configurator.h  defines.h  factory.h  formatter.h  humblelogging.h  logevent.h  logger.h  loglevel.h  mutex_windows.h
include/humblelogging/appender/: consoleappender.h  fileappender.h  nullappender.h  rollingfileappender.h
include/humblelogging/configuration/: defaultconfiguration.h  simpleconfiguration.h
include/humblelogging/formatter/: patternformatter.h  simpleformatter.h
include/humblelogging/util/: fmt.h  fmt.hpp  mutex.h  mutex_linux.h  mutex_nolock.h  mutex_windows.h  patternconfigregistry.h  processinfo.h  spinlock.h  spinlock_linux.h  spinlock_nolock.h  spinlock_windows.h  ternarytree.h
legacy/: TUTORIAL.md  configuration.cpp  configuration.h  mutex_nolock.cpp  simpleconfiguration.cpp  spinlock.h  spinlock_linux_native.cpp  spinlock_nolock.cpp
libs/humblelogging/: CMakeLists.txt
libs/humblelogging/include/humblelogging/: configuration.h  defines.h  formatter.h  humblelogging.h  logevent.h  loglevel.h  version.h
libs/humblelogging/include/humblelogging/util/: patternconfigregistry.h  ternarytree.h
libs/humblelogging/src/: configuration.cpp  logger.cpp
libs/humblelogging/src/formatter/: simpleformatter.cpp
libs/humblelogging/src/util/: patternconfigregistry.cpp  processinfo.cpp
src/: appender.cpp  configuration.cpp  configurator.cpp  factory.cpp  formatter.cpp  logevent.cpp  logger.cpp  loglevel.cpp  mutex_windows.cpp
src/appender/: consoleappender.cpp  fileappender.cpp  nullappender.cpp  rollingfileappender.cpp
src/configuration/: defaultconfiguration.cpp  simpleconfiguration.cpp
src/formatter/: patternformatter.cpp  simpleformatter.cpp
src/util/: mutex_c11.cpp  mutex_linux.cpp  mutex_linux_native.cpp  mutex_nolock.cpp  mutex_windows.cpp  mutex_windows_native.cpp  patternconfigregistry.cpp  processinfo.cpp  spinlock_c11.cpp  spinlock_linux.cpp  spinlock_nolock.cpp  spinlock_windows.cpp  spinlock_windows_native.cpp
tests/: CMakeLists.txt  tests.cpp
vs2012/: basic_example.vcxproj  basic_example.vcxproj.filters  configured_example.vcxproj  configured_example.vcxproj.filters  humblelogging.sln  humblelogging.vcxproj  humblelogging.vcxproj.filters  mtperformance_example.vcxproj  mtperformance_example.vcxproj.filters
vs2013/: basic_example.vcxproj  basic_example.vcxproj.filters  configured_example.vcxproj  humblelogging.sln  humblelogging.vcxproj  humblelogging.vcxproj.filters  mtperformance_example.vcxproj  mtperformance_example.vcxproj.filters
vs2015/: basic_example.vcxproj  configured_example.vcxproj  configured_example.vcxproj.filters  humblelogging.sln  humblelogging.vcxproj  mtperformance_example.vcxproj
