set(mtperformance_example_sources mtperformance_example.cpp)
include_directories(../../include)
add_executable(mtperformance_example ${mtperformance_example_sources})
target_link_libraries(mtperformance_example humblelogging)
if(UNIX)
  target_link_libraries(mtperformance_example pthread)
endif(UNIX)
humblelogging_POSTBUILD_COPY(mtperformance_example)